# game-of-life

./: Cargo.toml  README.md
examples/: acorn.rs  block-switch-engine.rs  boat.rs  die-hard.rs  glider-gun.rs  glider.rs  halfmax.rs  halfmax.txt  random.rs  spaceship.rs  unbounded.rs
src/: lib.rs  main.rs
