[package]
name = "game-of-life"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
rand = "0.8"

[[example]]
name = "halfmax"
path = "examples/halfmax.rs"

[dev-dependencies]
piston_window = "0.120.0"